--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,18 +53,13 @@ p {
 }
 
 footer.page-footer {
-  margin: 0;
+  margin-top: 12%;
 }
 .buttonf{
 	top: 250px;
 }
-footer {
-	position: relative;
-	bottom: 0;
-	width: 100%;
-}
 .container_login {
 	width: 400px; /* Ширина элемента в пикселах */
     padding: 10px; /* Поля вокруг текста */
-    margin: auto; /* Выравниваем по центру */
+    margin: 10% auto;
 	}
