Проверка существования email и валидности паролей

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,21 @@ footer.page-footer {
 
 #emailex {
 	
-	color: red !important;
 	visibility: hidden;
 }
+
+.veryweak{
+        color:#B40404;
+    }
+    .weak{
+        color:#DF7401;
+    }
+    .medium{
+        color:#FFFF00;
+    }
+    .strong{
+        color:#9AFE2E;
+    }
+    .verystrong{
+        color:#0B610B;
+    }
